--- a/tutorial/todo/pom.xml
+++ b/tutorial/todo/pom.xml
@@ -47,29 +47,9 @@
   		<version>3.3.2</version>
   	</dependency>
   	<dependency>
-  		<groupId>org.apache.logging.log4j</groupId>
-  		<artifactId>log4j-core</artifactId>
-  		<version>2.0.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.logging.log4j</groupId>
-  		<artifactId>log4j-1.2-api</artifactId>
-  		<version>2.0.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.codehaus.jackson</groupId>
-  		<artifactId>jackson-mapper-asl</artifactId>
-  		<version>1.8.5</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.json</groupId>
-  		<artifactId>json</artifactId>
-  		<version>20140107</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.apache.httpcomponents</groupId>
-  		<artifactId>httpclient</artifactId>
-  		<version>4.2.5</version>
+  		<groupId>com.microsoft.azure</groupId>
+  		<artifactId>azure-documentdb</artifactId>
+  		<version>0.9.0</version>
   	</dependency>
   </dependencies>
 </project>
