--- a/tutorial/todo/pom.xml
+++ b/tutorial/todo/pom.xml
@@ -26,6 +26,11 @@
     </plugins>
   </build>
   <dependencies>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.0.1</version>
+    </dependency>
   	<dependency>
   		<groupId>com.google.code.gson</groupId>
   		<artifactId>gson</artifactId>
@@ -49,7 +54,7 @@
   	<dependency>
   		<groupId>com.microsoft.azure</groupId>
   		<artifactId>azure-documentdb</artifactId>
-  		<version>0.9.0</version>
+  		<version>1.0.1</version>
   	</dependency>
   </dependencies>
 </project>
