--- a/bulkimport/pom.xml
+++ b/bulkimport/pom.xml
@@ -76,11 +76,10 @@
 			<version>1.58</version>
 		</dependency>
 		<dependency>
-			<!-- TODO: we should remove it (it is here for now for testing with log4j 
-				logging backend -->
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
