--- a/bulkimport/pom.xml
+++ b/bulkimport/pom.xml
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-documentdb</artifactId>
-			<version>1.14.0-SNAPSHOT</version>
+			<version>1.14.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
