--- a/bulkimport/pom.xml
+++ b/bulkimport/pom.xml
@@ -3,9 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.microsoft.azure</groupId>
 	<artifactId>documentdb-bulkimport</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
-	<description>Bulk Importer for Microsoft Azure DocumentDB</description>
+	<description>Document Bulk Importer for Azure Cosmos DB Service</description>
+        <name>${project.groupId}:${project.artifactId}</name>
 	<url>http://azure.microsoft.com/en-us/services/documentdb/</url>
 	<licenses>
 		<license>
@@ -18,6 +19,19 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<slf4j.version>1.7.6</slf4j.version>
 	</properties>
+        <developers>
+          <developer>
+            <name>DocumentDB Developer Platform Devs</name>
+            <email>docdbdevplatdevs@microsoft.com</email>
+            <organization>Microsoft</organization>
+            <organizationUrl>http://www.microsoft.com/</organizationUrl>
+          </developer>
+        </developers>
+        <scm>
+          <connection>scm:git:git@github.com:Azure/azure-documentdb-java.git</connection>
+          <developerConnection>scm:git:git@github.com:Azure/azure-documentdb-java.git</developerConnection>
+          <url>git@github.com:Azure/azure-documentdb-java.git</url>
+        </scm>
 	<build>
 		<plugins>
 			<plugin>
@@ -42,7 +56,6 @@
 						</goals>
 					</execution>
 				</executions>
-
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -51,6 +64,32 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
