--- a/bulkimport/pom.xml
+++ b/bulkimport/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.microsoft.azure</groupId>
 	<artifactId>documentdb-bulkimport</artifactId>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.2</version>
 
 	<description>Document Bulk Importer for Azure Cosmos DB Service</description>
         <name>${project.groupId}:${project.artifactId}</name>
