--- a/documentdb-examples/pom.xml
+++ b/documentdb-examples/pom.xml
@@ -4,17 +4,34 @@
 
 	<groupId>com.microsoft.azure</groupId>
 	<artifactId>documentdb-examples</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>documentdb-examples</name>
-	<url>http://maven.apache.org</url>
+	<url>https://docs.microsoft.com/en-us/azure/cosmos-db/sql-api-sdk-java</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.6</slf4j.version>
 		<log4j.version>1.2.17</log4j.version>
 	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19.1</version>
+				<configuration>
+					<includes>
+						<include>**/*Test*.java</include>
+						<include>**/*Samples*.java</include>
+						<include>**/*Sample*.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
@@ -26,7 +43,7 @@
 		<dependency>
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-documentdb</artifactId>
-			<version>1.13.0</version>
+			<version>1.15.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
