--- a/documentdb-examples/pom.xml
+++ b/documentdb-examples/pom.xml
@@ -2,14 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.microsoft.azure</groupId>
+	<parent>
+		<groupId>com.microsoft.azure</groupId>
+		<artifactId>documentdb-parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+
 	<artifactId>documentdb-examples</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
 
 	<name>documentdb-examples</name>
+	<packaging>jar</packaging>
 	<url>https://docs.microsoft.com/en-us/azure/cosmos-db/sql-api-sdk-java</url>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<slf4j.version>1.7.6</slf4j.version>
@@ -32,7 +35,6 @@
 			</plugin>
 		</plugins>
 	</build>
-
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -44,11 +46,6 @@
 			<groupId>com.microsoft.azure</groupId>
 			<artifactId>azure-documentdb</artifactId>
 			<version>1.15.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>23.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
