--- a/documentdb-examples/pom.xml
+++ b/documentdb-examples/pom.xml
@@ -65,5 +65,11 @@
 			<version>${log4j.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>23.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
