--- a/azure-documentdb-benchmark/pom.xml
+++ b/azure-documentdb-benchmark/pom.xml
@@ -69,7 +69,7 @@
     <dependency>
       <groupId>com.microsoft.azure</groupId>
       <artifactId>azure-documentdb-rx</artifactId>
-      <version>0.9.0-rc2</version>
+      <version>LATEST</version>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
