--- a/azure-documentdb-benchmark/pom.xml
+++ b/azure-documentdb-benchmark/pom.xml
@@ -17,7 +17,7 @@
 		<metrics.version>3.1.2</metrics.version>
 		<netty.version>4.1.7.Final</netty.version>
 		<maven.deploy.skip>true</maven.deploy.skip>
-        <enforcer.skip>true</enforcer.skip>
+		<enforcer.skip>true</enforcer.skip>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -112,17 +112,22 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2</version>
 				<configuration>
 					<descriptorRefs>
 						<descriptorRef>jar-with-dependencies</descriptorRef>
 					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.microsoft.azure.documentdb.benchmark.SimpleTests</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
 				<executions>
 					<execution>
-						<id>generate-jar-dependency</id>
-						<phase>prepare-package</phase>
+						<id>make-assembly</id>
+						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
@@ -131,24 +136,23 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>test-jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.6.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-eclipse-plugin</artifactId>
+				<version>2.8</version>
+				<configuration>
+					<classpathContainers>
+						<classpathContainer>
+							org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8
+						</classpathContainer>
+					</classpathContainers>
 				</configuration>
 			</plugin>
 		</plugins>
