--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
 	<modules>
 		<module>documentdb-examples</module>
 	</modules>
-	<build>
+  <properties>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
+  </properties>
+  <build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
